--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.0",
+    "@types/koa": "^2.0.39",
     "app-module-path": "^2.2.0",
     "nodemon": "^1.11.0",
     "ts-node": "^3.0.6",
     "typescript": "^2.3.4"
   },
   "dependencies": {
-    "dotenv": "^4.0.0"
+    "@types/koa-router": "^7.0.22",
+    "dotenv": "^4.0.0",
+    "koa": "^2.2.0",
+    "koa-router": "^7.2.0"
   }
 }
