--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@types/koa-router": "^7.0.22",
     "dotenv": "^4.0.0",
+    "http-proxy": "^1.16.2",
+    "https-proxy-agent": "^1.0.0",
     "koa": "^2.2.0",
     "koa-router": "^7.2.0"
   }
