--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "tsc",
     "clobber": "find . -name node_modules -prune -o -name '*.ts' -print0 | xargs -0 rm",
+    "lint": "prettier -l '**/*.ts'",
     "start": "node index.js",
     "start-watch": "nodemon index.ts",
     "heroku-postbuild": "yarn build && yarn clobber && yarn install --production"
@@ -20,6 +21,7 @@
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.22",
     "nodemon": "^1.11.0",
+    "prettier": "^1.4.4",
     "ts-node": "^3.0.6",
     "typescript": "^2.3.4"
   },
