--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@types/dotenv": "^4.0.0",
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.22",
+    "@types/koa-views": "^2.0.1",
     "nodemon": "^1.11.0",
     "prettier": "^1.4.4",
     "ts-node": "^3.0.6",
     "typescript": "^2.3.4"
   },
   "dependencies": {
+    "@types/app-root-path": "^1.2.4",
     "app-module-path": "^2.2.0",
+    "app-root-path": "^2.0.1",
     "dotenv": "^4.0.0",
     "http-proxy": "^1.16.2",
     "https-proxy-agent": "^1.0.0",
     "koa": "^2.2.0",
-    "koa-router": "^7.2.0"
+    "koa-router": "^7.2.0",
+    "koa-views": "^6.0.2"
   }
 }
