--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "http-proxy": "^1.16.2",
     "https-proxy-agent": "^1.0.0",
     "koa": "^2.2.0",
+    "koa-error": "^3.0.1",
     "koa-router": "^7.2.0",
     "koa-views": "^6.0.2",
     "lodash": "^4.17.4"
