--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
     "lint": "prettier -l '**/*.ts'",
     "start": "node index.js",
     "start-watch": "nodemon index.ts",
+    "test": "mocha",
     "heroku-postbuild": "yarn build && yarn clobber && yarn install --production"
   },
   "devDependencies": {
+    "@types/app-root-path": "^1.2.4",
+    "@types/chai": "^4.0.1",
     "@types/dotenv": "^4.0.0",
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.22",
     "@types/koa-views": "^2.0.1",
+    "@types/lodash": "^4.14.66",
+    "@types/mocha": "^2.2.41",
+    "chai": "^4.0.2",
+    "env-test": "^1.0.0",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "prettier": "^1.4.4",
     "ts-node": "^3.0.6",
     "typescript": "^2.3.4"
   },
   "dependencies": {
-    "@types/app-root-path": "^1.2.4",
-    "@types/lodash": "^4.14.66",
     "app-module-path": "^2.2.0",
     "app-root-path": "^2.0.1",
     "axios": "^0.16.2",
