--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/koa-views": "^2.0.1",
     "@types/lodash": "^4.14.66",
     "@types/mocha": "^2.2.41",
+    "@types/xmlbuilder": "^0.0.30",
     "chai": "^4.0.2",
     "env-test": "^1.0.0",
     "mocha": "^3.4.2",
@@ -45,6 +46,7 @@
     "koa-error": "^3.0.1",
     "koa-router": "^7.2.0",
     "koa-views": "^6.0.2",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "xmlbuilder": "^9.0.1"
   }
 }
